--- a/templates/index.html
+++ b/templates/index.html
@@ -1,64 +1,9 @@
 <html>
 <head>
-    <title>Item Details</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Landing page</title>
 </head>
 <body>
-    <h1>Item ID: {{ id }}</h1>
-  <!--  <img src="{{ url_for('static', path='tempimages/scanned_image6251809e-07d3-4c26-acff-b83699dfd49f.jpg') }}" style="width:600px">-->
-
-<!--
-    <div class="container">
-
-  
-        <h2 class="my-4">Add a new movie poster</h2>
-        
-        <form method="post" action="http://localhost:8000/uploadfile/cat" enctype="multipart/form-data" >
-         
-              <input type="file" accept="image/*" capture="environment" />
-              <br>
-              <button class="btn btn-dark my-4" type="submit">Take picture</button>
-        </form>
-
-  
-        <h2 class="my-4">Movie Poster</h2>
-        <div class="row">
-          {% if file_url %}
-          <div class="col-lg-4 col-md-6 col-sm-12 pb-4">
-            <img src="{{ file_url }}" class="img-fluid">
-            <br>
-            <a class="btn btn-dark my-4" href="/">Return to Homepage</a>
-          {% else %}
-          <p>No movies posters added.</p>
-          {% endif %}
-        </div>
--->
-
-<br>
-        
-<video id="player" controls autoplay></video>
-<button id="capture">Capture</button>
-<canvas id="canvas" width=100%" height=100%></canvas>
-<script>
-  const player = document.getElementById('player');
-  const canvas = document.getElementById('canvas');
-  const context = canvas.getContext('2d');
-  const captureButton = document.getElementById('capture');
-
-  const constraints = {
-    video: true,
-  };
-
-  captureButton.addEventListener('click', () => {
-    // Draw the video frame to the canvas.
-    context.drawImage(player, 0, 0, canvas.width, canvas.height);
-  });
-
-  // Attach the video stream to the video element and autoplay.
-  navigator.mediaDevices.getUserMedia(constraints).then((stream) => {
-    player.srcObject = stream;
-  });
-</script>
+<h1> Landing page</h1>
 
 </body>
 </html>
