--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,6 @@
                 <li>3. replace boat for an object you think is in the image.</li>
                 </ul>
                 <hr>
-              </div>
-                <hr>
                 <h2>How to get an example response</h2>
                 <p>Send a call to http://scangame.herokuapp.com/exampleresponse
                 <hr>
@@ -23,7 +21,7 @@
                 <p>Or check github : https://github.com/two-trick-pony-NL/PhotoScavengerBackend</p>
 
                 <hr>
-                <h2>Check what calls are being made {{values}} {{keys}}</h2>
+                <h2>Check what calls are being made</h2>
 
                 
                 <table style="padding: 15px; text-align: center;border: 1px solid;">
@@ -51,39 +49,64 @@
     const myChart = new Chart(ctx, {
         type: 'bar',
         data: {
-            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+            labels: ['Homepage','Example Response', 'NewAssignment V2', 'NewAssignment V1','uploadfileV2','uploadfileV1','Healtcheck by AWS' ],
             datasets: [{
                 label: '# API Calls to different Endpoints',
-                data: [12, 19, 3, 5, 2, 3],
+                data: {{values}},
                 backgroundColor: [
-                    'rgba(255, 99, 132, 0.2)',
-                    'rgba(54, 162, 235, 0.2)',
-                    'rgba(255, 206, 86, 0.2)',
-                    'rgba(75, 192, 192, 0.2)',
-                    'rgba(153, 102, 255, 0.2)',
-                    'rgba(255, 159, 64, 0.2)'
+                    'rgba(255, 99, 132, 0.2)'
                 ],
                 borderColor: [
-                    'rgba(255, 99, 132, 1)',
-                    'rgba(54, 162, 235, 1)',
-                    'rgba(255, 206, 86, 1)',
-                    'rgba(75, 192, 192, 1)',
-                    'rgba(153, 102, 255, 1)',
-                    'rgba(255, 159, 64, 1)'
+                    'rgba(255, 99, 132, 1)'
                 ],
                 borderWidth: 1
             }]
         },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero: true
-                }
-            }
-        }
     });
     </script>
                 
+                <div width="400" height="400">
+
+                <canvas id="myChart1" width="400" height="400"></canvas>
+                </div>
+                <script>
+                    const ctx = document.getElementById('myChart');
+                    const myChart1 = new Chart(ctx, {
+                        type: 'pie',
+                        data: {
+                            labels: ['Homepage','Example Response', 'NewAssignment V2', 'NewAssignment V1','uploadfileV2','uploadfileV1','Healtcheck by AWS' ],
+                            datasets: [{
+                            label: '# API calls per endpoint',
+                            data: {{values}},
+                            backgroundColor: [
+                                'rgba(255, 99, 132, 0.2)',
+                                'rgba(54, 162, 235, 0.2)',
+                                'rgba(255, 206, 86, 0.2)',
+                                'rgba(75, 192, 192, 0.2)',
+                                'rgba(153, 102, 255, 0.2)',
+                                'rgba(255, 159, 64, 0.2)'
+                            ],
+                            borderColor: [
+                                'rgba(255, 99, 132, 1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        scales: {
+                            y: {
+                                beginAtZero: true
+                            }
+                        }
+                    }
+                });
+                </script>
 
         </body>
     
