--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,104 @@
 <html>
         <head>
             <title>PhotoScavenger API </title>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
         </head>
         <body>
-        <img src="https://user-images.githubusercontent.com/71013416/179624009-d72ba019-3639-438d-8857-dbc061f675a3.png" width="200" height="200" alt="PhotoScavengerLogo">
-            <h1> Welcome to the photoscavenger API <h1>
-            <hr>
-            <h2>How to detect objects using PhotoScavenger API</h2>
-                <ul>
-                <li>1. Prepare a POST request with an image as file/body </li>
-                <li>2. Send that request to to: http://scangame.herokuapp.com/uploadfile/boat or  http://scangame.herokuapp.com/v2/uploadfile/boat</li>
-                <li>3. replace boat for an object you think is in the image.</li>
-                </ul>
-                <hr>
-                <h2>How to get an example response</h2>
-                <p>Send a call to http://scangame.herokuapp.com/exampleresponse
-                <hr>
-                <h2> Where to find the documentation? </h2>
-                <p>check: https://scangamebackend.herokuapp.com/docs for documentation</p>
-                <p>Or check github : https://github.com/two-trick-pony-NL/PhotoScavengerBackend</p>
+            <nav class="navbar bg-light">
+                <div class="container">
+                  <a class="navbar-brand" href="/">Photo Scavenger API</a>
+            
+                </div>
+    </nav>
+    <div class="container">
+    
+      
+        <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="https://user-images.githubusercontent.com/71013416/179624009-d72ba019-3639-438d-8857-dbc061f675a3.png" class="img-fluid rounded-start" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">What is Photo Scavenger?</h5>
+                  <p class="card-text">Photo Scavenger is a object detection game, where you earn points by taking photos of objects around your house.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+                
+              </div>
+            </div>
+          </div>
 
+
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  What is an API?
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>With an API computers can talk to each other.</strong> For instance if your smartphone shows you the weather of today, it made an API call to a weather service somewhere on the internet. The Photo Scavenger API allows you to upload pictures and it will tell you what objects are in there. This can be used if you are working on a app or website. There is a companion app for the API that you can download for iOS on the appstore. 
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    How to detect objects using PhotoScavenger API
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>To work with the API you'll need to build some kind of app or service.</strong> that can make calls to the API. If you have that then it is simple, as Photo Scavenger does not have any rate limits or authentication. 
+                 <br> <ul>
+                    <li>1. Prepare a POST request with an image as file/body from the app that you are building </li>
+                    <li>2. Send that request to to: https://photoscavenger.vdotvo9a4e2a6.eu-central-1.cs.amazonlightsail.com/uploadfile/boat or  https://photoscavenger.vdotvo9a4e2a6.eu-central-1.cs.amazonlightsail.com/v2/uploadfile/boat</li>
+                    <li>3. replace boat for an object you think is in the image.</li>
+                    </ul>
+                    * Note the v1 API detects 18 objects, the V2 80
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    How to get an example response
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <a href="https://photoscavenger.vdotvo9a4e2a6.eu-central-1.cs.amazonlightsail.com/exampleresponse" class="btn btn-danger" tabindex="-1" role="button">Get example response (JSON)</a>
+                    <br>Then you should receive something like: <br><br>
+                    <code> {"Searchedfor:":"boat",<br>"Wasfound":"NO",<br>"OtherObjectsDetected":["person","person","person","person","bicycle","motorbike","bicycle","motorbike","bicycle"],<br>"Processed_FileName":"scanned_image54e46fb8-93f8-43ad-a8ec-99eb83f260af.jpg",<br>"file_url":"image54e46fb8-93f8-43ad-a8ec-99eb83f260af.jpg",<br>}</code>
+                    <p>Or send a <code>GET</code> request to https://photoscavenger.vdotvo9a4e2a6.eu-central-1.cs.amazonlightsail.com/exampleresponse
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+                    Where to find the documentation?
+                  </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <a href="https://photoscavenger.vdotvo9a4e2a6.eu-central-1.cs.amazonlightsail.com/docs/" class="btn btn-danger" tabindex="-1" role="button">Get API documentation (Swagger)</a>
+                <br>
+                    <p>For the source code check <a href="https://github.com/two-trick-pony-NL/PhotoScavengerBackend">GitHub</a></p>
+                  </div>
+                </div>
+            </div>
+          </div>
+                </div>
                 <hr>
-                <h2>Check what calls are being made</h2>
+
+    <div class="container">
+                <h4>API Calls per Endpoint</h4>
 
                 
-                <table style="padding: 15px; text-align: center;border: 1px solid;">
+                <table class="table">
                     <tr>
                       <th>Endpoint</th>
                       <th>Number of calls</th>
@@ -65,7 +139,7 @@
     });
     </script>
                 
-                <div width="400" height="400">
+                <div height="400">
 
                 <canvas id="myChart1" width="400" height="400"></canvas>
                 </div>
@@ -107,7 +181,8 @@
                     }
                 });
                 </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+            </div>
         </body>
     
     </html> 
