--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,9 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<div height="300px">
 <canvas id="myChart" width="400" height="400"></canvas>
+</div>
 <script>
     const ctx = document.getElementById('myChart');
     const myChart = new Chart(ctx, {
@@ -137,52 +139,7 @@
             }]
         },
     });
-    </script>
-                
-                <div height="400">
-
-                <canvas id="myChart1" width="400" height="400"></canvas>
-                </div>
-                <script>
-                    const ctx = document.getElementById('myChart');
-                    const myChart1 = new Chart(ctx, {
-                        type: 'pie',
-                        data: {
-                            labels: ['Homepage','Example Response', 'NewAssignment V2', 'NewAssignment V1','uploadfileV2','uploadfileV1','Healtcheck by AWS' ],
-                            datasets: [{
-                            label: '# API calls per endpoint',
-                            data: {{values}},
-                            backgroundColor: [
-                                'rgba(255, 99, 132, 0.2)',
-                                'rgba(54, 162, 235, 0.2)',
-                                'rgba(255, 206, 86, 0.2)',
-                                'rgba(75, 192, 192, 0.2)',
-                                'rgba(153, 102, 255, 0.2)',
-                                'rgba(255, 159, 64, 0.2)'
-                            ],
-                            borderColor: [
-                                'rgba(255, 99, 132, 1)',
-                                'rgba(54, 162, 235, 1)',
-                                'rgba(255, 206, 86, 1)',
-                                'rgba(75, 192, 192, 1)',
-                                'rgba(153, 102, 255, 1)',
-                                'rgba(255, 159, 64, 1)'
-                            ],
-                            borderWidth: 1
-                        }]
-                    },
-                    options: {
-                        responsive: true,
-                        scales: {
-                            y: {
-                                beginAtZero: true
-                            }
-                        }
-                    }
-                });
-                </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-            </div>
+    </script>      
         </body>
     
     </html> 
