--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
     const myChart = new Chart(ctx, {
         type: 'bar',
         data: {
-            labels: ['Homepage','Example Response', 'NewAssignment V2', 'NewAssignment V1','uploadfileV2','uploadfileV1','Healtcheck by AWS' ],
+            labels: ['Homepage','Example Response', 'NewAssignment V2', 'NewAssignment V1','uploadfileV2','uploadfileV1' ],
             datasets: [{
                 label: '# API Calls to different Endpoints',
                 data: {{values}},
@@ -138,8 +138,14 @@
                 borderWidth: 1
             }]
         },
+        options: {
+          responsive: true,
+          maintainAspectRatio: false,
+          indexAxis: 'y'
+  }
     });
-    </script>      
+    </script>     
+    * Healtcheck by AWS removed from chart as it sends are request every few seconds 
         </body>
     
     </html> 
