--- a/templates/index.html
+++ b/templates/index.html
@@ -102,25 +102,115 @@
                     <tr>
                       <th scope="row">1</th>
                       <td>/exampleresponse</td>
-                      <td>A JSON object of a detected object, without you uploading a image </td>
-                      <td><code> {"Searchedfor:":"boat",<br>"Wasfound":"NO",<br>"OtherObjectsDetected":["person","person","person","person","bicycle","motorbike","bicycle","motorbike","bicycle"],<br>"Processed_FileName":"scanned_image54e46fb8-93f8-43ad-a8ec-99eb83f260af.jpg",<br>"file_url":"image54e46fb8-93f8-43ad-a8ec-99eb83f260af.jpg",<br>}</code></td>
-                    </tr>
+                      <td>A JSON object of a detected object, without you uploading a image. This endpoint is great for testing if you do not have infrastructure yet to upload images </td>
+                      <td><code>{<br>
+                        "Searchedfor:": "dog",<br>
+                        "Wasfound": "NO",<br>
+                        "OtherObjectsDetected": [<br>
+                            "person",<br>
+                            "cat",<br>
+                            "bus",<br>
+                        ],<br>
+                        "Processed_FileName": "image928f49c1-65e3-4eac-8770-b890db598cde.jpg"
+                    }</code></td>                    </tr>
                     <tr>
                       <th scope="row">2</th>
                       <td>/newassignment/200</td>
                       <td>A JSON object with a random name and an Emoji. The endpoint requires you to send a score for instance "200", the higher the score the more complex the assignment These can be used the V1 version of this endpoint returns 18 objects, the V2 version can do 80</td>
-                      <td><code>{"sofa":"🛋"}</code></td>
+                      <td><code>{"sofa":"🛋"}</code><br><br> The V1 endpoint supports these objects: <code>["background", "earoplane", "bicycle", "bird", "boat", "bottle", "bus", "car", "cat", "chair", "cow", "diningtable", "dog", "horse", "motorbike", "person", "pottedplant", "sheep", "sofa", "train", "tvmonitor"]
+                      </code></td>
                     </tr>
                     <tr>
                       <th scope="row">3</th>
                       <td>/v2/newassignment/200</td>
                       <td>A JSON object with a random name and an Emoji. The endpoint requires you to send a score for instance "200", the higher the score the more complex the assignment These can be used the V1 version of this endpoint returns 18 objects, the V2 version can do 80</td>
-                      <td><code>{"apple":"🍎"}</code></td>
+                        <td><code>{"apple":"🍎"}</code><br><br> The V2 endpoint supports these objects: <br><code>person
+                          bicycle
+                          car
+                          motorcycle
+                          airplane
+                          bus
+                          train
+                          truck
+                          boat
+                          traffic light
+                          fire hydrant
+                          stop sign
+                          parking meter
+                          bench
+                          bird
+                          cat
+                          dog
+                          horse
+                          sheep
+                          cow
+                          elephant
+                          bear
+                          zebra
+                          giraffe
+                          backpack
+                          umbrella
+                          handbag
+                          tie
+                          suitcase
+                          frisbee
+                          skis
+                          snowboard
+                          sports ball
+                          kite
+                          baseball bat
+                          baseball glove
+                          skateboard
+                          surfboard
+                          tennis racket
+                          bottle
+                          wine glass
+                          cup
+                          fork
+                          knife
+                          spoon
+                          bowl
+                          banana
+                          apple
+                          sandwich
+                          orange
+                          broccoli
+                          carrot
+                          hot dog
+                          pizza
+                          donut
+                          cake
+                          chair
+                          couch
+                          potted plant
+                          bed
+                          dining table
+                          toilet
+                          tv
+                          laptop
+                          mouse
+                          remote
+                          keyboard
+                          cell phone
+                          microwave
+                          oven
+                          toaster
+                          sink
+                          refrigerator
+                          book
+                          clock
+                          vase
+                          scissors
+                          teddy bear
+                          hair drier
+                          toothbrush
+                        </code></td>
                     </tr>
                     <tr>
                       <th scope="row">4</th>
                       <td>/uploadfile/boat</td>
-                      <td>A JSON object with the outcome of the detection. The endpoint requires you to send a object you were expecting for instance "boat". </td>                      <td><code>{<br>
+                      <td>A JSON object with the outcome of the detection. The endpoint requires you to send a object you were expecting for instance "boat". </td>                      
+                      <td><code>{<br>
                         "Searchedfor:": "dog",<br>
                         "Wasfound": "NO",<br>
                         "OtherObjectsDetected": [<br>
