Changed spelling error in HealtCheck

--- a/templates/index.html
+++ b/templates/index.html
@@ -309,7 +309,7 @@
   }
     });
     </script>     
-    * Healtcheck by AWS removed from chart as it sends are request every few seconds 
+    * Healthcheck by AWS removed from chart as it sends are request every few seconds 
         </body>
     
     </html> 
