--- a/templates/index.html
+++ b/templates/index.html
@@ -289,7 +289,7 @@
     const myChart = new Chart(ctx, {
         type: 'bar',
         data: {
-            labels: ['Homepage','Example Response', 'NewAssignment V2', 'NewAssignment V1','uploadfileV2','uploadfileV1' ],
+            labels: ['Homepage','Example Response', 'NewAssignment V2', 'NewAssignment V1','uploadfileV2','uploadfileV1', 'HealthCheck by AWS' ],
             datasets: [{
                 label: '# API Calls to different Endpoints',
                 data: {{values}},
